config/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: matrix
  name: matrix
  namespace: matrix
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8008
  selector:
    app: matrix
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: element
  name: element
  namespace: matrix
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: element
status:
  loadBalancer: {}
