config/matrix/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matrix
  namespace: matrix
spec:
  parentRefs:
  - name: cilium
    namespace: default
    sectionName: https
  hostnames:
  - matrix.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: matrix
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element
  namespace: matrix
spec:
  parentRefs:
  - name: cilium
    namespace: default
    sectionName: https
  hostnames:
  - element.jds.net
  rules:
  - matches:
    - path:
        value: "/"
        type: PathPrefix
    backendRefs:
    - name: element
      port: 80
